--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -6,3 +6,17 @@
   color: slategrey;
   border-bottom: 1px solid #2980b9;
 }
+
+
+#nav {
+  padding: 30px;
+}
+
+#nav a {
+  font-weight: bold;
+  color: #2c3e50;
+}
+
+#nav a.router-link-exact-active {
+  color: #42b983;
+}
