--- a/frontend/src/styles/recipe.css
+++ b/frontend/src/styles/recipe.css
@@ -1,7 +1,9 @@
 /* Recipe Search */
 
 .recipe-search {
+  border-radius: 15px 15px 15px 15px;
   max-width: 750px;
+  max-height: 50px;
   display: block;
   margin: auto;
   width: 50%;
