--- a/frontend/src/styles/card.css
+++ b/frontend/src/styles/card.css
@@ -16,6 +16,7 @@
 .card-text {
   color: black;
   text-decoration-color: black;
+  margin: 2% 2%
 
 }
 
@@ -29,7 +30,7 @@
   color: black;
 }
 .link:hover {
-   color: #2980b9
+   color: #6F0055;
 }
 
 
@@ -50,6 +51,9 @@
   }
 
   .calendar-card-body {
+    border-style: solid;
+    border-color: #6F0055;
+    color: whitesmoke ;
     background-color: whitesmoke;
     background: linear-gradient(180deg, rgba(240,235,223,1) 30%
     rgba(78,78,78,0.7105217086834734) 100%);
