--- a/frontend/src/styles/recipe.css
+++ b/frontend/src/styles/recipe.css
@@ -39,7 +39,7 @@
 
   input:focus {
     background: whitesmoke;
-    border: 3px solid #2980b9;
+    border: 3px solid #6F0055;
     outline: none;
 
   }
