--- a/frontend/src/styles/shopping.css
+++ b/frontend/src/styles/shopping.css
@@ -19,7 +19,7 @@ ul {
 }
 
 h1 {
-    background: #2980b9 ;
+    background: #6F0055 ;
     color: whitesmoke;
     margin: 0;
     padding: 10px 20px;
@@ -72,18 +72,18 @@ input {
 
 input:focus {
   background: whitesmoke;
-  border: 3px solid #2980b9;
+  border: 3px solid #6F0055;
   outline: none;
 
 }
 
-#shopping-container {
+/* #shopping-container {
     width: 500px;
     margin: 150px auto;
     background: #f7f7f7;
     box-shadow: 0 0 3px rgba(0,0,0 0.1);
-    border-color: 3px solid #2980b9
-}
+    border-color: 3px solid #6F0055
+} */
 
 .bought {
     color: gray;
