--- a/frontend/src/styles/containers.css
+++ b/frontend/src/styles/containers.css
@@ -14,3 +14,11 @@
   width: 50%;
 
 }
+
+#form-container {
+  width: 500px;
+  margin: 150px auto;
+  background: #f7f7f7;
+  box-shadow: 0 0 3px rgba(0,0,0 0.1);
+  border-color: 3px solid #6F0055
+}
