--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -1,6 +1,7 @@
 @import "./buttons.css";
 @import "./card.css";
 @import "./containers.css";
+@import "./inputs.css";
 @import "./forms.css";
 @import "./navbar.css";
 @import "./recipe.css";
