--- a/frontend/src/styles/recipe.css
+++ b/frontend/src/styles/recipe.css
@@ -1,13 +1,6 @@
 /* Recipe Search */
 
-.recipe-search {
-  border-radius: 15px 15px 15px 15px;
-  max-width: 750px;
-  max-height: 50px;
-  display: block;
-  margin: auto;
-  width: 50%;
-  }
+
 
   ul {
       list-style: none;
@@ -27,6 +20,10 @@
       background-color: #b9b8b8;
   }
 
+  .fa-plus {
+    float: right;
+}
+
   input {
       font-size: 20px;
       color: black;
@@ -39,7 +36,7 @@
 
   input:focus {
     background: whitesmoke;
-    border: 3px solid #6F0055;
+    border: 0.5px solid #6F0055;
     outline: none;
 
   }
