--- a/frontend/src/styles/shopping.css
+++ b/frontend/src/styles/shopping.css
@@ -44,7 +44,7 @@ li:nth-child(2n) {
 }
 
 li span {
-    background: #e74c3c;
+    background: #6F0055;
     height: 40px;
     margin-right: 20px;
     text-align: center;
@@ -67,35 +67,17 @@ input {
     width: 100%;
     padding: 13px 13px 13px 20px;
     box-sizing: border-box;
-    border: 3px solid rgba(0,0,0,0);
+    border: 1px solid rgba(0,0,0,0);
 }
 
 input:focus {
   background: whitesmoke;
-  border: 3px solid #6F0055;
+  border: 1px solid #6F0055;
   outline: none;
 
 }
-
-/* #shopping-container {
-    width: 500px;
-    margin: 150px auto;
-    background: #f7f7f7;
-    box-shadow: 0 0 3px rgba(0,0,0 0.1);
-    border-color: 3px solid #6F0055
-} */
 
 .bought {
     color: gray;
     text-decoration: line-through;
 }
-
-
-/* Shopping Header  */
-
-.jumbotron {
-    background-image: url('../assets/shopping-list-image-min.jpg');
-    background-position: center;
-    background-size: 100%;
-    min-height: 300px
-    }
