Continuation with AddRecipeForm design WIP

--- a/frontend/src/styles/buttons.css
+++ b/frontend/src/styles/buttons.css
@@ -8,3 +8,11 @@
   color: whitesmoke;
   margin-bottom: 3%
 }
+
+
+/* Add Recipe */
+
+.form-btns {
+  padding: 10px 10px;
+  display: inline-block;
+}
