--- a/frontend/src/styles/containers.css
+++ b/frontend/src/styles/containers.css
@@ -22,3 +22,17 @@
   box-shadow: 0 0 3px rgba(0,0,0 0.1);
   border-color: 3px solid #6F0055
 }
+
+.add-recipe-form-container {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  border-radius: 20px 20px 20px 20px;
+  background-position: 50% 55%;
+  max-width: 80%;
+  padding-top: 5%;
+}
+
+.recipe-form-container {
+  margin-left: 25%;
+}
