[Frontend] AddRecipe Form implemented WIP

--- a/frontend/src/styles/buttons.css
+++ b/frontend/src/styles/buttons.css
@@ -1,6 +1,9 @@
+
+/* Recipes */
 .orgo-form-btn {
   background-color: #6F0055;
-  color: whitesmoke
+  color: whitesmoke;
+  margin: 20px 20px;
 }
 
 .orgo-card-btn {
