[Frontend] Starting logic for AddRecipeForm

--- a/frontend/src/styles/forms.css
+++ b/frontend/src/styles/forms.css
@@ -16,6 +16,7 @@
   /* Add Recipe */
 
   .recipe-form-control {
+    width: 80%;
     display: inline-block;
     margin: auto auto;
     background-color: whitesmoke;
